--- a/stylesheets/scss/components/_bottom-nav.scss
+++ b/stylesheets/scss/components/_bottom-nav.scss
@@ -4,16 +4,12 @@
  * http://www.google.com/design/spec/components/bottom-navigation.html
  **************************************/
 
-.sc-bottom-nav {
+.sc-bottom-nav, .sc-bottom-shifting {
 	background: $bottom-nav-background;
 	bottom: 0;
-	position: $bottom-nav-position;
+	position: fixed;
 	@include material-shadow(8);
-	width: $bottom-nav-width-small;
-
-	@media #{$medium-up} {
-		width: $bottom-nav-width-large;
-	}
+	width: 100%;
 
 	ul {
 		list-style-type: none;
@@ -25,95 +21,76 @@
 			line-height: normal;
 			padding: 0;
 			text-align: center;
+		}
+	}
+}
 
-			a {
-				color: $white;
-				display: block;
-				font-size: $bottom-nav-font-size;
-				height: $bottom-nav-height;
-				line-height: normal;
-				max-width: $bottom-nav-item-max-width;
-				min-width: $bottom-nav-item-min-width-small;
-				padding: $bottom-nav-padding;
 
-				@media #{$medium-up} {
-					min-width: $bottom-nav-item-min-width-large;
-				}
+$bottom-nav-height: rem-calc(56px); // Default rem-calc(56px)
+$bottom-nav-icon-size: rem-calc(24px); // Default rem-calc(24px)
 
-				&:hover {
-					color: $bottom-nav-font-color;
-				}
+.sc-bottom-nav {
+	ul li a {
+		color: $bottom-nav-font-color;
+		display: block;
+		font-size: rem-calc(12px);
+		height: $bottom-nav-height;
+		line-height: normal;
+		max-width: rem-calc(168px);
+		min-width: rem-calc(80px);
+		padding: rem-calc(8px) rem-calc(12px) rem-calc(10px) rem-calc(12px);
 
-				.material-icons {
-					font-size: $bottom-nav-icon-size;
-					height: $bottom-nav-icon-size;
-					width: $bottom-nav-icon-size;
-				}
+		@media #{$medium-up} {
+			min-width: rem-calc(120px);
+		}
 
-				&.sc-active {
-					font-size: $bottom-nav-font-size-active;
-					padding: $bottom-nav-padding-active;
-				}
-			}
+		&:hover {
+			color: $bottom-nav-font-color;
+		}
+
+		.material-icons {
+			font-size: $bottom-nav-icon-size;
+			@include square($bottom-nav-icon-size);
+		}
+
+		&.sc-active {
+			font-size: rem-calc(14px);
+			padding: rem-calc(6px) rem-calc(12px) rem-calc(10px) rem-calc(12px);
 		}
 	}
 }
 
 .sc-bottom-shifting {
-	background: $bottom-shifting-background;
-	bottom: 0;
-	position: $bottom-shifting-position;
-	@include material-shadow(8);
-	width: $bottom-shifting-width-small;
+	ul li a {
+		color: $bottom-nav-font-color;
+		display: block;
+		height: $bottom-nav-height;
+		line-height: normal;
+		max-width: rem-calc(96px);
+		min-width: rem-calc(56px);
+		padding: rem-calc(16px) 0;
 
-	@media #{$medium-up} {
-		width: $bottom-shifting-width-large;
-	}
+		&:hover {
+			color: $bottom-nav-font-color;
+		}
 
-	ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
+		.material-icons {
+			font-size: $bottom-nav-icon-size;
+			@include square($bottom-nav-icon-size);
+		}
 
-		li {
-			display: inline-block;
-			line-height: normal;
-			padding: 0;
-			text-align: center;
+		.sc-content {
+			display: none;
+		}
 
-			a {
-				color: $bottom-shifting-font-color;
+		&.sc-active {
+			font-size: rem-calc(14px);
+			max-width: rem-calc(168px);
+			min-width: rem-calc(96px);
+			padding: rem-calc(6px) 0 rem-calc(10px) 0;
+
+			.sc-content {
 				display: block;
-				height: $bottom-shifting-height;
-				line-height: normal;
-				max-width: $bottom-shifting-max-width;
-				min-width: $bottom-shifting-min-width;
-				padding: $bottom-shifting-padding;
-
-				&:hover {
-					color: $white;
-				}
-
-				.material-icons {
-					font-size: $bottom-shifting-icon-size;
-					height: $bottom-shifting-icon-size;
-					width: $bottom-shifting-icon-size;
-				}
-
-				.sc-content {
-					display: none;
-				}
-
-				&.sc-active {
-					font-size: $bottom-shifting-font-size;
-					max-width: $bottom-shifting-max-width-active;
-					min-width: $bottom-shifting-min-width-active;
-					padding: $bottom-shifting-padding-active;
-
-					.sc-content {
-						display: block;
-					}
-				}
 			}
 		}
 	}
