--- a/stylesheets/scss/smaterial.scss
+++ b/stylesheets/scss/smaterial.scss
@@ -18,13 +18,14 @@
 
 // Components
 @import 'components/appbar'; // Top menu bar (can be turned off)
-@import 'components/bottom-nav'; // Used to style the bottom navigation
+@import 'components/bottom-navigation'; // Used to style the bottom navigation
 @import 'components/bottom-sheet'; // Used to style bottom sheet / modal (can be turned off)
 @import 'components/buttons'; // Used to style buttons (can be turned off)
 @import 'components/cards'; // Used to style cards (can be turned off)
 @import 'components/chips'; // Used to style chips (can be turned off)
 @import 'components/dialogs'; // Used to style dialog (can be turned off)
 @import 'components/drawer'; // Navigation drawer (can be turned off)
+//@import 'components/navigation-drawer'; // Navigation drawer (can be turned off)
 @import 'components/lists'; // Lists (can be turned off)
 @import 'components/notifications'; // Notifications style (can be turned off)
 @import 'components/progress'; // Used to style progress and activity indicators (can be turned off)
