Finished media notification

--- a/stylesheets/scss/components/_settings.scss
+++ b/stylesheets/scss/components/_settings.scss
@@ -119,7 +119,7 @@ $bottom-nav-font-color: $white; // Default $white
 /**************************************
  * Bottom sheet
  **************************************/
-$bottom-sheet-background: $white; // Default $white
+$bottom-sheet-background: $background; // Default $background
 $bottom-sheet-font-color: rgba($black, .87); // Default rgba($black, .87)
 $bottom-sheet-header-font-color: rgba($black, .54); // Default rgba($black, .54)
 $bottom-sheet-icons-color: $bottom-sheet-header-font-color; // Default $bottom-sheet-header-font-color
@@ -194,6 +194,10 @@ $switch-track-disabled-background: if( $theme == light, rgba($black, .12), rgba(
 $switch-thumb-disabled-background: if( $theme == light, rgba($grey-400, 1), rgba($grey-800, 1) ); // Default if( $theme == light, rgba($grey-400, 1), rgba($grey-800, 1) )
 $switch-thumb-radial-disabled-background: rgba($grey-400, .2); // Default rgba($grey-400, .2)
 
+/**************************************
+* Notifications
+***************************************/
+$notification-background: $background; // $background
 
 /**************************************
  * Snackbars and toasts
@@ -204,7 +208,7 @@ $snackbar-font-color: $white; // Default $white
 /**************************************
  * Navigation drawer
  **************************************/
-$drawer-background: $white; // Default $white
+$drawer-background: $background; // Default $background
 $drawer-hover: $main-color; // Default $main-color
 $drawer-icons-font-size: rem-calc(22.4px); // Default rem-calc(22.4px)
 $drawer-icons-size: rem-calc(48px); // Default rem-calc(48px) Should be the same as default list item height
