--- a/stylesheets/scss/components/_navigation-drawer.scss
+++ b/stylesheets/scss/components/_navigation-drawer.scss
@@ -3,27 +3,62 @@ $drawer-item-height: rem-calc(48px);
 $drawer-icon-size: rem-calc(24px);
 
 .sc-drawer {
-	background: $drawer-background;
 	position: fixed;
-	bottom: 0;
-	overflow: auto;
 	left: 0;
-	margin: 0 0 0 -103%;
-	max-width: rem-calc(280px);
-	@include transition(margin $transition-small-duration $basic-transition);
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: 3;
 
-	@media #{$medium-only} {
-		@include transition(margin $transition-medium-duration $basic-transition);
-		max-width: rem-calc(320px);
+	@media #{$medium-down} {
+		&:before {
+			content: '';
+			display: block;
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			background: rgba($black, .4);
+			@include opacity(0);
+			@include transition(opacity $transition-small-duration $element-enter-transition);
+		}
 	}
 
-	@media #{$medium-up} {
-		margin: 0;
+
+	&-container {
+		position: relative;
+		height: 100%;
+		bottom: 0;
+		overflow: auto;
+		background: $drawer-background;
+		max-width: rem-calc(280px);
+
+		@media #{$medium-only} {
+			max-width: rem-calc(320px);
+			@include transition(transform $transition-medium-duration $element-enter-transition);
+		}
+
+		@media #{$medium-up} {
+			//max-width: rem-calc(400px);
+			@include transition(transform $transition-large-duration $element-enter-transition);
+		}
 	}
 
 	&-permanent {
-		top: 0;
-		z-index: 3;
+		&-full-height {
+			top: 0;
+			border-right: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
+		}
+
+		&-clipped {
+
+		}
+
+		&-floating {
+
+		}
 	}
 
 	&-persistent {
@@ -38,31 +73,62 @@ $drawer-icon-size: rem-calc(24px);
 
 	}
 
-	.sc-expanded {
-		margin: 0;
+	&.sc-expanded {
+		@include transform(none);
+
+		@media #{$medium-down} {
+			&:before {
+		 		@include opacity(1);
+			}
+		}
 	}
 
 	ul {
 		list-style-type: none;
 		margin: 0;
 		padding: 0;
+	}
 
-		li {
-			color: rgba($black, .87);
-			font-weight: 500;
-			font-size: rem-calc(14px);
-			height: $drawer-item-height;
-			display: block;
-			padding: 0 $drawer-padding;
+	li {
+		color: rgba($black, .87);
+		font-weight: 500;
+		font-size: rem-calc(14px);
+		height: $drawer-item-height;
+		display: block;
+		padding: 0 $drawer-padding;
 
-			a {
-				color: rgba($black, .87);
-				font-weight: 500;
-				font-size: rem-calc(14px);
+		&:hover {
+			background: $grey-200;
+		}
+
+		&.sc-subheader {
+			color: rgba($black, .54);
+		}
+
+		&.sc-no-background {
+			background: transparent;
+
+			&:hover {
+				background: transparent;
 			}
+		}
+	}
 
-			.sc-subheader {
-				color: rgba($black, .54);
+	a {
+		color: rgba($black, .87);
+		font-weight: 500;
+		width: 100%;
+		display: block;
+		height: $drawer-item-height;
+		font-size: rem-calc(14px);
+		margin: 0 calc(#{$drawer-padding} * -2) 0 calc(#{$drawer-padding} * -1);
+		padding: 0 $drawer-padding;
+
+		&:hover, &.sc-active {
+			color: $main-color;
+
+			.material-icons {
+				color: $main-color;
 			}
 		}
 	}
@@ -79,10 +145,6 @@ $drawer-icon-size: rem-calc(24px);
 	.sc-drawer-dropdown {
 		cursor: pointer;
 		height: auto;
-
-		&:hover {
-			background: $grey-200;
-		}
 
 		ul {
 			display: none;
@@ -101,12 +163,30 @@ $drawer-icon-size: rem-calc(24px);
 		}
 	}
 
+	.sc-drawer-dropdown.sc-expanded {
+		.sc-arrow {
+			@include transform(rotate(180deg));
+		}
+
+		ul {
+			display: block;
+			visibility: visible;
+			@include opacity(1);
+			max-height: 100%;
+		}
+
+		ul ul {
+			margin: 0 0 0 rem-calc(10px);
+		}
+	}
+
 	.sc-arrow {
 		position: absolute;
 		right: rem-calc(16px);
 		@include square($drawer-icon-size);
 		font-size: $drawer-icon-size;
 		line-height: $drawer-icon-size;
+		vertical-align: middle;
 		margin: 0;
 		@include transition(all $transition-small-duration $basic-transition);
 
@@ -116,23 +196,6 @@ $drawer-icon-size: rem-calc(24px);
 
 		@media #{$medium-up} {
 			@include transition(all $transition-large-duration $basic-transition);
-		}
-	}
-
-	.sc-drawer-dropdown.sc-expanded {
-		.sc-arrow {
-			@include transform(rotate(180deg));
-		}
-
-		ul {
-			display: block;
-			visibility: visible;
-			opacity: 1;
-			max-height: 100%;
-		}
-
-		ul ul {
-			margin: 0 0 0 rem-calc(10px);
 		}
 	}
 }
