--- a/stylesheets/scss/components/_notifications.scss
+++ b/stylesheets/scss/components/_notifications.scss
@@ -4,15 +4,21 @@
  *  https://material.google.com/patterns/notifications.html
  **************************************/
 
+$notification-header-icon-size: rem-calc(14px);
+$notification-media-icon-size: rem-calc(35px);
+$notification-content-top: rem-calc(5px);
+$notification-content-sides: rem-calc(8px);
+$notification-content-bottom: rem-calc(10px);
+$notification-image-size: rem-calc(40px);
+
 .sc-notification {
 	@include material-shadow(3);
 	@include border-radius(rem-calc(2px));
+	background: $notification-background;
 	float: left;
+	max-width: 100%;
 	position: relative;
 	width: auto;
-	max-width: 100%;
-	background: $white;
-	cursor: pointer;
 
 	&-header {
 		padding: rem-calc(8px) rem-calc(8px) 0 rem-calc(8px);
@@ -24,14 +30,14 @@
 
 		.sc-separator {
 			&:after {
-				content: '\25CF'; // \2022
 				color: rgba($black, .54);
+				content: '\25CF';  // \2022
 				padding: rem-calc(5px);
 			}
 		}
 
 		&-app-icon .material-icons {
-			font-size: 1rem;
+			font-size: $notification-header-icon-size;
 			height: auto;
 			width: rem-calc(18px);
 		}
@@ -41,24 +47,25 @@
 		}
 
 		&-expand .material-icons {
-			font-size: 1rem;
-			height: auto;
-			width: auto;
-			@include transition(all $transition-small-duration $basic-transition);
+			font-size: $notification-header-icon-size;
+			@include square($notification-header-icon-size);
+			cursor: pointer;
+			@include transform(rotate(0deg));
+			@include transition(transform $transition-small-duration $basic-transition);
 
 			@media #{$medium-only} {
-				@include transition(all $transition-medium-duration $basic-transition);
+				@include transition(transform $transition-medium-duration $basic-transition);
 
 			}
 
 			@media #{$medium-up} {
-				@include transition(all $transition-large-duration $basic-transition);
+				@include transition(transform $transition-large-duration $basic-transition);
 			}
 		}
 	}
 
 	&-content {
-		padding: rem-calc(5px) rem-calc(8px) rem-calc(10px) rem-calc(8px);
+		padding: $notification-content-top $notification-content-sides $notification-content-bottom $notification-content-sides;
 
 		&-title, .sc-subject {
 		 	color: rgba($black, .87);
@@ -73,9 +80,9 @@
 	&-actions {
 		background: transparent;
 		@include transition(visibility $transition-small-duration $basic-transition unquote(',') opacity $transition-small-duration $basic-transition unquote(',') max-height $transition-small-duration $basic-transition unquote(',') background $transition-small-duration $basic-transition);
-		visibility: hidden;
-		@include opacity(0);
 		max-height: 0;
+		@include opacity(0);
+		visibility: hidden;
 
 		@media #{$medium-only} {
 			@include transition(visibility $transition-medium-duration $basic-transition unquote(',') opacity $transition-medium-duration $basic-transition unquote(',') max-height $transition-medium-duration $basic-transition unquote(',') background $transition-medium-duration $basic-transition);
@@ -111,13 +118,12 @@
 			}
 
 			img {
-				position: absolute;
-				right: rem-calc(8px);
-				top: rem-calc(5px);
+				@include square($notification-image-size);
 				max-width: 25%;
+				position: absolute;
+				right: $notification-content-sides;
 				@include border-radius(50%);
-				width: rem-calc(40px);
-				height: rem-calc(40px);
+				top: $notification-content-top;
 			}
 		}
 	}
@@ -127,18 +133,17 @@
 			position: relative;
 
 			&-text {
-				visibility: hidden;
-				@include opacity(0);
 				max-height: 0;
+				@include opacity(0);
+				visibility: hidden;
 			}
 
 			img {
+				@include square($notification-image-size);
 				position: absolute;
-				top: rem-calc(5px);
-				right: rem-calc(8px);
+				right: $notification-content-sides;
 				@include border-radius(50%);
-				width: rem-calc(40px);
-				height: rem-calc(40px);
+				top: $notification-content-top;
 
 			}
 		}
@@ -151,9 +156,9 @@
 			&-text {
 				img {
 					max-width: 100%;
-					width: 0;
-					@include opacity(0);
 					visibility: hidden;
+					@include opacity(0);
+					width: 0;
 					@include transition(opacity $transition-small-duration $basic-transition $transition-small-duration unquote(',') visibility $transition-small-duration $basic-transition $transition-small-duration);
 
 					@media #{$medium-only} {
@@ -167,11 +172,10 @@
 			}
 
 			> img {
+				@include square(rem-calc(40px));
 				position: absolute;
-				top: rem-calc(5px);
-				right: rem-calc(8px);
-				width: rem-calc(40px);
-				height: rem-calc(40px);
+				right: $notification-content-sides;
+				top: $notification-content-top;
 				@include opacity(1);
 				@include transition(opacity $transition-small-duration $basic-transition);
 
@@ -194,8 +198,8 @@
 			}
 
 			.sc-notification-content-text {
-				text-align: right;
 				float: right;
+				text-align: right;
 			}
 		}
 	}
@@ -207,43 +211,72 @@
 			position: relative;
 
 			.sc-actions {
+				left: auto;
 				position: absolute;
-				top: rem-calc(5px);
 				right: rem-calc(48px);
 				text-align: right;
-				width: rem-calc(138px);
+				top: $notification-content-top;
+				width: calc(#{$notification-media-icon-size} * 4);
+				@include transition(all $transition-small-duration $basic-transition);
+
+				@media #{$medium-only} {
+					@include transition(all $transition-medium-duration $basic-transition);
+
+				}
+
+				@media #{$medium-up} {
+					@include transition(all $transition-large-duration $basic-transition);
+				}
 
 				.material-icons {
+					@include square($notification-media-icon-size);
 					color: rgba($black, .54);
-					font-size: rem-calc(35px);
-					width: rem-calc(35px);
-					height: rem-calc(35px);
+					font-size: $notification-media-icon-size;
 					line-height: rem-calc(44px);
 
 					&:first-of-type, &:last-of-type {
 						visibility: hidden;
 						@include opacity(0);
 						width: 0;
+						@include transition(all $transition-small-duration $basic-transition);
+
+						@media #{$medium-only} {
+							@include transition(all $transition-medium-duration $basic-transition);
+
+						}
+
+						@media #{$medium-up} {
+							@include transition(all $transition-large-duration $basic-transition);
+						}
 					}
 				}
 			}
 
 			img {
+				@include square(rem-calc(40px));
 				position: absolute;
-				top: rem-calc(5px);
 				right: rem-calc(8px);
-				width: rem-calc(40px);
-				height: rem-calc(40px);
+				top: rem-calc(5px);
+				@include transition(all $transition-small-duration $basic-transition);
+
+				@media #{$medium-only} {
+					@include transition(all $transition-medium-duration $basic-transition);
+
+				}
+
+				@media #{$medium-up} {
+					@include transition(all $transition-large-duration $basic-transition);
+				}
 			}
 		}
 	}
 
 	&.sc-expanded {
 		.sc-notification-actions {
-			visibility: visible;
+			background: $grey-200;
 			@include opacity(1);
 			max-height: rem-calc(2000px);
-			background: $grey-200;
+			visibility: visible;
 
 			> * {
 				visibility: visible;
@@ -259,9 +292,9 @@
 
 		&.sc-big-text {
 			.sc-notification-content-text {
-				visibility: visible;
-				@include opacity(1);
 				max-height: rem-calc(2000px);
+				@include opacity(1);
+				visibility: visible;
 			}
 		}
 
@@ -283,24 +316,23 @@
 
 		&.sc-media {
 			.sc-notification-content {
+				height: calc( (#{rem-calc($line-height-body-1+0px)} * 2) + #{$notification-media-icon-size} + #{$notification-content-top} + #{$notification-content-bottom});
 				.sc-actions {
-					top: rem-calc(44px);
-					left: 0;
+					left: $notification-content-sides;
+					text-align: left;
 					right: auto;
-					width: rem-calc((5*35)+0px);
+					top: calc(#{rem-calc($line-height-body-1+0px)} * 2);
+					width: calc(#{$notification-media-icon-size} * 6);
 
-					.material-icons {
-						&:first-of-type, &:last-of-type {
-							width: rem-calc(35px);
-							visibility: visible;
-							@include opacity(1);
-						}
+					.material-icons:first-of-type,:last-of-type {
+						visibility: visible;
+						@include square($notification-media-icon-size);;
+						@include opacity(1);
 					}
 				}
 
 				img {
-					width: rem-calc(92px);
-					height: rem-calc(92px);
+					@include square(calc((#{rem-calc($line-height-body-1+0px)} * 2)  + #{$notification-media-icon-size}));
 				}
 			}
 		}
